<resources>
    <string name="app_name">勺子课堂</string>
    <string name="main_superior">首页</string>
    <string name="main_course">课程</string>
    <string name="main_read">我的学习</string>
    <string name="main_mine">账号</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="pay_by_wx_title">通过微信支付</string>

    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="cancel">取消</string>
    <string name="new_search_hint">搜索更多餐饮线上课程</string>
    <string name="new_search_history_tv">搜索历史</string>
    <string name="new_search_prossible_like">猜你喜欢</string>
    <string name="history_no_data">未找到相关内容</string>
    <string name="search_hot">热门搜索</string>
    <string name="operation">运营力</string>
    <string name="talents">人才力</string>
    <string name="support">支持力</string>
    <string name="strategy">战略力</string>
    <string name="marketing">营销力</string>
    <string name="has_no_more">没有更多了</string>
    <string name="learn_all_course">学习完整课程</string>
    <string name="reminder">温馨提示，课程购买后，不得退订，如有疑问，请拨打客服电话400-900-3650。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_success">报名成功</string>
    <string name="share_success">分享成功</string>
    <string name="select_extra_pay_num">请选择额外购买数量</string>
    <string name="select_pay_num">请选择购买数量</string>
    <string name="pay_success_hint">转发链接给好友,输入手机号可领取\n(每个链接只可使用一次)</string>
    <string name="pay_success">购买成功</string>
    <string name="hint_input_name">请输入姓名</string>
    <string name="hint_input_tel">请输入手机号</string>
    <string name="event_add">确认添加</string>
    <string name="next">下一步</string>
    <string name="select_apply">选择报名人员</string>
    <string name="train_id">1109 1473 2410 601</string>
    <string name="select_pay">选择购买人员</string>
    <string name="start_test">开始测试</string>


    <string name="crash_dialog_message">是否发送异常报告，帮助我们做的更好？</string>
    <string name="crash_dialog_negative_button">取消</string>
    <string name="crash_dialog_positive_button">发送</string>
    <string name="crash_dialog_title">异常报告</string>
    <string name="update_mandatory_toast">请安装本应用的最新版本以便继续使用。</string>
    <string name="update_dialog_title">有可用更新</string>
    <string name="update_dialog_message">是否显示更新信息?</string>
    <string name="update_dialog_negative_button">忽略</string>
    <string name="update_dialog_positive_button">显示</string>
    <string name="download_failed_dialog_title">下载失败</string>
    <string name="download_failed_dialog_message">下载更新包失败，是否重试?</string>
    <string name="download_failed_dialog_negative_button">取消</string>
    <string name="download_failed_dialog_positive_button">重试</string>
    <string name="update_view_update_button">开始更新</string>
    <string name="update_view_source_failed">设备没有设置为允许安装来自未知来源的应用，请在设置->安全中允许此选项。</string>
    <string name="classroom_number">教室号</string>
    <string name="nickname">昵称</string>
    <string name="enter_classroom">进入教室</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="classroomnumber_not_empty">教室号不能为空</string>
    <string name="nickname_not_empty">昵称不能为空</string>
    <string name="kick_out_tip">有相同身份的用户进入，您已经离开教室</string>
    <string name="chairman_kick_out">您已被老师请出教室！</string>
    <string name="class_started">已经上课了</string>
    <string name="class_closeed">已经下课了</string>
    <string name="lass_patrol">巡课</string>
    <string name="server_list_empty">服务器正在初始化，请稍后点击</string>
    <string name="net_disable">当前网络不可用，请检查后重启应用</string>
    <string name="find_new_version">发现新版本</string>
    <string name="my_work">我的作业</string>
    <string name="publish">发布</string>
    <string name="publish_work">发布作业</string>
    <string name="work">作业</string>
    <string name="good_work">优秀作业</string>
    <string name="szkt_company">勺子课堂企业号</string>
    <string name="function_1">功能1 学习协同</string>
    <string name="function_2">功能2 学习监督</string>
    <string name="function_3">功能3 学习激励</string>
    <string name="function_4">功能4 学习比拼</string>
    <string name="describe_1">优质课程一键分享给员工伙伴学习更高效</string>
    <string name="describe_2">随时随地查看员工学习报表学习更高效</string>
    <string name="describe_4">实时企业学习榜单发布比拼单课、比拼考试，学习更有趣</string>
    <string name="describe_3">为优秀的伙伴点赞、积分学习更有劲</string>
    <string name="name">姓名</string>
    <string name="tel">电话</string>
    <string name="tel_num">手机号</string>
    <string name="open_time">开通时间</string>
    <string name="my_invite">我的邀请</string>
    <string name="invite_info">发送邀请卡至好友\n好友开通会员仅需2999元，原价3650元</string>
    <string name="save_local">保存到本地</string>
    <string name="share_pyq">朋友圈</string>
    <string name="wechat_tv">微信</string>
    <string name="tv_cancel">取消</string>
    <string name="add_service">扫码添加客服</string>
    <string name="apply_success_info">知晓课堂相关信息，领取制定好礼\n，更有机会与同行交流。</string>
    <string name="copy">复制</string>
    <string name="invite_friend_open_vip">邀请好友开通会员</string>
    <string name="invite_friend">邀请好友</string>
    <string name="invite_record">邀请记录</string>
    <string name="action_rule">活动规则</string>
    <string name="rule_1">1. 分享本活动邀请好友，您与被邀好友都将获得7\n\n日会员特权，勺子课堂线上课程免费学习</string>
    <string name="rule_2">2.当邀请好友数≥2时，您将获得《识途》案例集一本。</string>
    <string name="rule_3">3.可预填收货信息，满足领取条件后我们会第一时\n\n间依次寄出。</string>
    <string name="bookcase_hint">活动为抢领，您可预填收货地址并保证信息准确\n好友助力成功后我们会第一时间依次寄出</string>
    <string name="address">省份、城市、区县</string>
    <string name="detailed_address">详细地址、如街道楼牌等</string>
    <string name="sure">确定</string>
    <string name="wait_friend">等待好友助力</string>
    <string name="wait_friend_hint">还需好友助力……</string>
    <string name="wait_info">只要有2位好友接受邀请，您将获得案例集《识途》</string>
    <string name="order_title_1">恭喜您获得《识途》！</string>
    <string name="order_hint_1">工作人员会在3-5个工作日内寄出</string>
    <string name="order_title_2">您的《识途》案例集已经寄出请注意查收！</string>
    <string name="order_hint_2">运单号：</string>
    <string name="alj_share_title">帮我抢《识途》，10000元的线上课程就送给你了!</string>
    <string name="alj_share_desc">限量1000本，就靠你了…</string>
    <string name="share_address">分享成功，请预填收货地址</string>
    <string name="get_book">恭喜您，获得《识途》</string>
    <string name="check_logistics">查看物流</string>
    <string name="please_confirm_address">请您确认收货地址及信息是否正确</string>
    <string name="order_main_hint">您购买的课程已有更新，点击查看学习</string>
    <string name="record_main_hint">您学习的课程已有更新，点击查看学习</string>
    <string name="new_course_tag">新课</string>
    <string name="update_course_tag">已更新</string>
    <string name="open_database">数据库已经打开</string>
    <string name="network_connection_is_failed">未连接网络，请检查网络设置</string>
    <string name="save_defeated">保存失败,请打开sd卡写入权限</string>
    <string name="setting">设置</string>
    <string name="perssion_title">您已拒绝手机写入权限是否前去开启？</string>
    <string name="again_login_title">您已在其他地方登陆，请重新登陆</string>
    <string name="again_login">重新登陆</string>
    <string name="data_error">请求数据发生错误</string>
    <string name="open_class_no_cache">公开课尚未开始，无法缓存哦！</string>
    <string name="toast_fail_msg">网络请求失败,原因：</string>
    <string name="manager">管理</string>
    <string name="the_network_is_not_available">当前网络不可用</string>
    <string name="more">更多</string>
    <string name="hot">热门</string>
    <string name="all_action">查看全年课表</string>
    <string name="hot_search">热门搜索</string>
    <string name="check_more_event">查看并报名更多线下课</string>
    <string name="look_all_course">查看全部课程</string>
    <string name="look_all_essay">查看全部文章</string>
    <string name="search_more_hink">搜索更多餐饮线上课程</string>
    <string name="no_Layout">no Layout</string>
    <string name="study_group_title">学习打卡小组</string>
    <string name="imm_join">立即加入</string>
    <string name="rule_of_event">活动规则</string>
    <string name="main_study_group">学习小组</string>
    <string name="introduce_course">课程介绍</string>
    <string name="save_qr">长按保存图片，打开微信扫一扫，点击相册选取图片，识别加入微信群</string>
    <string name="punch_card_progress_tv">今日学习进度</string>
    <string name="punch_card_finish">很遗憾，该打卡活动已结束报名</string>
    <string name="join_group">加入小组</string>
    <string name="punch_card_title">课程打卡小组</string>
    <string name="task_success">今日打卡已完成</string>
    <string name="all_task_success">恭喜您，已完成所有打卡</string>
    <string name="task_defeated">很遗憾，未完成打卡任务</string>
    <string name="my_award">我的奖励</string>
    <string name="join_action">您尚未报名此课程，请点击\"加入小组\"按钮参与</string>
    <string name="coupon_exchange">兑换</string>
    <string name="study_remark">学习心得</string>
    <string name="title_activity_new_eassy_detail">NewEassyDetailActivity</string>
    <string name="service_hint_fail">已为您记录，客服会尽快联系您  您可以尝试通过添加您的专属顾问微信，通过微信联系</string>
</resources>
