<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wh.wang.scroopclassproject.newproject.ui.activity.InviteActivity">

    <include layout="@layout/titlebarback_new"/>
    <LinearLayout
        android:id="@+id/invite_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/titlebarbackss"
        android:orientation="horizontal"
        android:background="@color/c_fafbfc">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#989898"
            android:text="@string/name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#989898"
            android:text="@string/tel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#989898"
            android:text="@string/open_time"/>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/invite_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/invite_title"
        android:background="#fff">
    </android.support.v7.widget.RecyclerView>
</RelativeLayout>
