<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    tools:context="com.wh.wang.scroopclassproject.newproject.ui.fragment.casebook_frag.CompleteInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/action_hint"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#eab064"
        android:textSize="12sp"
        android:textColor="#fff"
        android:gravity="center"
        android:text="@string/bookcase_hint" />
    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical"
        android:layout_below="@+id/action_hint"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="13sp"
            android:layout_marginLeft="20dp"
            android:textColorHint="#a5a5a5"/>
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/name_hint"
            android:background="@null"
            android:textSize="13sp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textColor="#282828"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ebebeb"
        android:layout_below="@+id/name"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/tel"
        android:orientation="vertical"
        android:layout_below="@+id/name"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tel_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_num"
            android:textSize="13sp"
            android:layout_marginLeft="20dp"
            android:textColorHint="#a5a5a5"/>
        <EditText
            android:id="@+id/edit_tel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:textSize="13sp"
            android:textColor="#282828"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:inputType="phone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ebebeb"
        android:layout_below="@+id/tel"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/address"
        android:layout_below="@+id/tel"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/address_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textSize="13sp"
            android:layout_marginLeft="20dp"
            android:textColorHint="#a5a5a5"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="13sp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textColor="#282828"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ebebeb"
        android:layout_below="@+id/address"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/place"
        android:orientation="vertical"
        android:layout_below="@+id/address"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/place_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detailed_address"
            android:textSize="13sp"
            android:layout_marginLeft="20dp"
            android:textColorHint="#a5a5a5"/>
        <EditText
            android:id="@+id/edit_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:gravity="left|top"
            android:textSize="13sp"
            android:textColor="#282828"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ebebeb"
        android:layout_below="@+id/place"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    
    <TextView
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/place"
        android:layout_marginTop="20dp"
        android:background="@drawable/apply_share_bg"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="16sp"
        android:text="@string/sure"/>


</RelativeLayout>
